--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
 - main
 
@@ -9,24 +5,41 @@ resources:
 - repo: self
 
 variables:
-  # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: 'ee29ed19-fd39-4f25-8489-0aacfa477c62'
-  imageRepository: 'tetrisgamewebapp'
-  containerRegistry: 'acrtetris.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
-
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
+ dockerRegistryServiceConnection: 'ee29ed19-fd39-4f25-8489-0aacfa477c62'
+ imageRepository: 'tetrisgamewebapp'
+ containerRegistry: 'acrtetris.azurecr.io'
+ dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
+ vmImageName: 'ubuntu-latest'
+ buildConfiguration: 'Release'
+ solution: '**/*.sln'
+ artifactName: 'TetrisGameWebApp'
+ artifactsPath: '$(Build.ArtifactStagingDirectory)/$(artifactName)'
 
 stages:
 - stage: Build
-  displayName: Build and push stage
-  jobs:
-  - job: Build
+ displayName: Build and push stage
+ jobs:
+ - job: Build
     displayName: Build
     pool:
       vmImage: $(vmImageName)
     steps:
+    - task: NuGetToolInstaller@1
+      displayName: 'Install NuGet'
+
+    - task: NuGetCommand@2
+      displayName: 'NuGet restore'
+      inputs:
+        restoreSolution: '$(solution)'
+
+    - task: VSBuild@1
+      displayName: 'Build solution'
+      inputs:
+        solution: '$(solution)'
+        msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
+        platform: '$(BuildPlatform)'
+        configuration: '$(buildConfiguration)'
+
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
@@ -36,10 +49,8 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: latest
 
-    # Publish artifacts
     - task: PublishBuildArtifacts@1
-      displayName: 'Publish Artifact: drop'
+      displayName: 'Publish Artifact'
       inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'drop'
-        publishLocation: 'Container'
+        pathtoPublish: '$(artifactsPath)'
+        artifactName: '$(artifactName)'
